--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "CommonJS",
       "outDir": "./dist",
       "rootDir": "./src",
-      "strict": true
+      "strict": true,
+      "esModuleInterop": true,
+      "module": "commonjs",
+      "target": "es2017",
+      "resolveJsonModule": true,
     }
   }
   
